--- a/src/css/themes/_unified-style.scss
+++ b/src/css/themes/_unified-style.scss
@@ -168,10 +168,40 @@ $countries: (
 
     }
 
+    // Typography
+
+    $fx-cool-blue: nth($country, 2);
+
+    a{
+      color: $fx-cool-blue;
+    }
+
+
+    h1{
+      color: $fx-cool-blue;
+    }
+
+    h2{
+      color: desaturate( $fx-cool-blue, 30% );
+    }
+
+    h3{
+      color: desaturate( $fx-cool-blue, 50% );
+    }
+
+    h4{
+      color: desaturate( $fx-cool-blue, 70% );
+    }
+
+    h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small, h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small, .h1 .small, .h2 .small, .h3 .small, .h4 .small, .h5 .small, .h6 .small{
+      color: $fx-cool-blue;
+    }
+
+
     // Standard Fenix Theme
 
 
-    $fx-cool-blue: nth($country, 2);
+
 
     .fx-text-primary-color{
       color: $fx-cool-blue;
