--- a/src/css/themes/_unified-style.scss
+++ b/src/css/themes/_unified-style.scss
@@ -26,7 +26,7 @@ $countries: (
                 (MLI, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,45% 76%, #29403e, #305a52, #3a7f70),
                 (RWA, #f07f52, #f09752, #2f5674, #f8cba9, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #2d3e46, #345962, #3f7d8b),
                 (SEN, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (ZZZ, #cdc02a, #f0e352, #2f5674, #f8f1a9, #e0e9f1, #abb9c4, #c9ddef, #93a0ab, #a5bcd0,50% 50%, #2d3246, #344362, #3f598b)
+                (ZZZ, #ffca0c, #f0e352, #2f5674, #f8f1a9, #e0e9f1, #abb9c4, #c9ddef, #93a0ab, #a5bcd0,50% 50%, #2d3246, #344362, #3f598b)
 );
 
 
@@ -38,6 +38,7 @@ $countries: (
 
   body[data-country='#{nth($country, 1)}']{
 
+    $fx-cool-blue: nth($country, 2);
 
     //// Start of theme builder
 
@@ -125,6 +126,31 @@ $countries: (
 
     }
 
+
+    .language{
+
+
+      .tx-srlanguagemenu-pi1{
+
+        >div{
+
+
+          &.CUR{
+
+            a{
+              color: $fx-cool-blue;
+            }
+
+
+          }
+
+
+        }
+
+      }
+
+    }
+
     //CountrySTAT Home End
 
     // CountrySTAT Sidebar
@@ -170,11 +196,12 @@ $countries: (
 
     // Typography
 
-    $fx-cool-blue: nth($country, 2);
+
 
     a{
       color: $fx-cool-blue;
     }
+
 
 
     h1{
@@ -199,9 +226,6 @@ $countries: (
 
 
     // Standard Fenix Theme
-
-
-
 
     .fx-text-primary-color{
       color: $fx-cool-blue;
@@ -426,6 +450,13 @@ $countries: (
       }
 
     }
+
+    .dropdown-menu{
+      a{
+        color: inherit;
+      }
+    }
+
 
 
     .swiper-button-prev {
