--- a/src/css/countrystat-ui.css
+++ b/src/css/countrystat-ui.css
@@ -5982,7 +5982,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
   font-size: 10px;
   display: inline-block;
   padding: 3px;
-  color: #333;
+  color: #333 !important;
   border: 1px solid #333;
   margin-bottom: 20px; }
 
